[package]
name = "sort_middleware_lib"
version = "0.1.0"
authors = ["anray"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sort_lib = { path = "../sort_lib" }
random_data_lib = { path = "../random_data_lib" }
async-std = "1.6.3"
time = "0.1"
