[package]
name = "thread_run"
version = "0.1.0"
authors = ["anray"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sort_middleware_lib = { path = "../sort_middleware_lib" }
random_data_lib = { path = "../random_data_lib" }
threadpool = "1.8.1"
time = "0.1"
